a v0.10 -fixed scrollbar issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -98,6 +98,10 @@ html {
     scrollbar-width: 0px;
 }
 
+::-webkit-scrollbar{
+    display: none;
+}
+
 ::-moz-selection {
     background: #b3d4fc;
     text-shadow: none;
